Styled header with responsive design

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             <span class="material-symbols-outlined"> search </span>
             <input type="text" placeholder="Search Facebook" />
           </div>
+          <div class="nav">
+            <ul>
+              <li>
+                <a href="/">
+                  <span class="material-symbols-outlined"> menu </span></a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
         <nav class="nav">
           <ul>
@@ -68,9 +77,31 @@
                 </span></a
               >
             </li>
+            <li class="menu-bar">
+              <a href="/">
+                <span class="material-symbols-outlined"> menu </span></a
+              >
+            </li>
           </ul>
         </nav>
-        <div class="user-area"></div>
+        <div class="user-area">
+          <ul>
+            <li><span class="material-symbols-outlined"> apps </span></li>
+            <li id="add_icon">
+              <span class="material-symbols-outlined"> add </span>
+            </li>
+            <li><i class="fa-brands fa-facebook-messenger"></i></li>
+            <li>
+              <i class="fa-solid fa-bell"></i>
+            </li>
+            <li>
+              <img
+                src="./assets/img/profile_pic.jpg"
+                alt="Profile not found!"
+              />
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <!-- Header Start -->
