Adding style of left & right side

--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
         </div>
         <nav class="nav">
           <ul>
-            <li>
+            <li data-name="Home">
               <a href="/">
                 <span class="material-symbols-outlined"> home </span></a
               >
             </li>
-            <li>
+            <li data-name="Watch">
               <a href="/">
                 <span class="material-symbols-outlined">
                   smart_display
                 </span></a
               >
             </li>
-            <li>
+            <li data-name="Marketplace">
               <a href="/">
                 <span class="material-symbols-outlined"> storefront </span></a
               >
             </li>
-            <li>
+            <li data-name="Groups">
               <a href="/">
                 <span class="material-symbols-outlined"> groups </span></a
               >
             </li>
-            <li>
+            <li data-name="Gaming">
               <a href="/">
                 <span class="material-symbols-outlined">
                   videogame_asset
@@ -105,5 +105,194 @@
       </div>
     </header>
     <!-- Header Start -->
+
+    <!-- Main Start -->
+    <main>
+      <aside class="left-side">
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/profile_pic.jpg" alt="Profile Not Found!" />
+          </div>
+          <span>Ðůř Jøy</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-1.png" alt="Profile Not Found!" />
+          </div>
+          <span>Friends</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-2.png" alt="Profile Not Found!" />
+          </div>
+          <span>Feeds</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-3.png" alt="Profile Not Found!" />
+          </div>
+          <span>Groups</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-4.png" alt="Profile Not Found!" />
+          </div>
+          <span>Marketplace</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-5.png" alt="Profile Not Found!" />
+          </div>
+          <span>Watch</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-6.png" alt="Profile Not Found!" />
+          </div>
+          <span>Memories</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-7.png" alt="Profile Not Found!" />
+          </div>
+          <span>Saved</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-8.png" alt="Profile Not Found!" />
+          </div>
+          <span>Pages</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-9.png" alt="Profile Not Found!" />
+          </div>
+          <span>Events</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img">
+            <img src="./assets/img/left-10.png" alt="Profile Not Found!" />
+          </div>
+          <span>Ads Manager</span>
+        </div>
+        <div class="access-box">
+          <div class="access-img see-more-btn">
+            <svg
+              fill="currentColor"
+              viewBox="0 0 16 16"
+              width="1em"
+              height="1em"
+              class="x1lliihq x1k90msu x2h7rmj x1qfuztq x198g3q0 x1qx5ct2 xw4jnvo"
+            >
+              <g fill-rule="evenodd" transform="translate(-448 -544)">
+                <path
+                  fill-rule="nonzero"
+                  d="M452.707 549.293a1 1 0 0 0-1.414 1.414l4 4a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L456 552.586l-3.293-3.293z"
+                ></path>
+              </g>
+            </svg>
+          </div>
+          <span>See more</span>
+        </div>
+      </aside>
+      <div class="middle-section"></div>
+      <aside class="right-side">
+        <div class="contact-title">
+          <span>Contact</span>
+          <div class="contact-icon">
+            <div class="icon-box">
+              <span class="material-symbols-outlined"> video_call </span>
+            </div>
+            <div class="icon-box">
+              <span class="material-symbols-outlined"> search </span>
+            </div>
+            <div class="icon-box">
+              <span class="material-symbols-outlined"> more_horiz </span>
+            </div>
+          </div>
+        </div>
+        <div class="active-list">
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-1.jpg" alt="" />
+            </div>
+            <span>Mehedi Hasan Sagor</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-2.jpg" alt="" />
+            </div>
+            <span>Tawkir Ahmed</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-3.jpg" alt="" />
+            </div>
+            <span>Mahbubur Rahman</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-4.jpg" alt="" />
+            </div>
+            <span>Sojoy Das</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-5.jpg" alt="" />
+            </div>
+            <span>Sahariyar Shuvo</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-6.jpg" alt="" />
+            </div>
+            <span>Abdur Rahman/span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-7.jpg" alt="" />
+            </div>
+            <span>Johirul Islam Sagor</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-8.jpg" alt="" />
+            </div>
+            <span>Md. Jahidul Islam/span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-9.jpg" alt="" />
+            </div>
+            <span>Apurbo Debnath</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-10.jpg" alt="" />
+            </div>
+            <span>Alamin Khan</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-11.jpg" alt="" />
+            </div>
+            <span>Jewel Khan</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-12.jpg" alt="" />
+            </div>
+            <span>Antu Ghosh</span>
+          </div>
+          <div class="active-item">
+            <div class="active-img">
+              <img src="./assets/img/active-13.jpg" alt="" />
+            </div>
+            <span>Saif Rabby</span>
+          </div>
+        </div>
+      </aside>
+    </main>
+    <!-- Main End -->
   </body>
 </html>
