--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <span class="material-symbols-outlined"> search </span>
             <input type="text" placeholder="Search Facebook" />
           </div>
-          <div class="nav">
+          <div  class="nav">
             <ul>
-              <li>
+              <li >
                 <a href="/">
                   <span class="material-symbols-outlined"> menu </span></a
                 >
@@ -77,7 +77,7 @@
                 </span></a
               >
             </li>
-            <li class="menu-bar">
+            <li data-name="More" class="menu-bar">
               <a href="/">
                 <span class="material-symbols-outlined"> menu </span></a
               >
