Iframe change into youtube

--- a/index.html
+++ b/index.html
@@ -681,15 +681,13 @@
                 <div class="post-img post-height">
                   <div class="post-img-cover">
                     <iframe
-                      src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fmunzereenshahid19%2Fvideos%2F219510400947692%2F&show_text=false&width=560&t=0"
                       width="560"
-                      height="314"
-                      style="border: none; overflow: hidden"
-                      scrolling="no"
+                      height="315"
+                      src="https://www.youtube.com/embed/5FvBbIR3tas"
+                      title="YouTube video player"
                       frameborder="0"
-                      allowfullscreen="true"
-                      allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-                      allowfullscreen="true"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen
                     ></iframe>
                   </div>
                 </div>
