Add stories navigate btn, online indicator

--- a/index.html
+++ b/index.html
@@ -316,6 +316,19 @@
                   </div>
                 </div>
               </div>
+              <div class="stories-navigation">
+                <svg
+                  fill="#65676B"
+                  viewBox="0 0 24 24"
+                  width="24px"
+                  height="24px"
+                  class="x1lliihq x1k90msu x2h7rmj x1qfuztq xcza8v6 xxk0z11 xvy4d1p"
+                >
+                  <path
+                    d="M9.209 5.207 16 12l-6.791 6.793a1 1 0 1 0 1.415 1.414l7.5-7.5a1 1 0 0 0 0-1.414l-7.5-7.5a1 1 0 1 0-1.415 1.414z"
+                  ></path>
+                </svg>
+              </div>
             </div>
           </div>
           <div class="write-post">
@@ -753,78 +766,127 @@
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-1.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Mehedi Hasan Sagor</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-2.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Tawkir Ahmed</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-3.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Mahbubur Rahman</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-4.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Sojoy Das</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-5.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Sahariyar Shuvo</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-6.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Abdur Rahman</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-7.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Johirul Islam Sagor</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-8.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="online"></div>
+                </div>
               </div>
               <span>Md. Jahidul Islam</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-9.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="last-online">
+                    <span>5m</span>
+                  </div>
+                </div>
               </div>
               <span>Apurbo Debnath</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-10.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="last-online">
+                    <span>10m</span>
+                  </div>
+                </div>
               </div>
               <span>Alamin Khan</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-11.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="last-online">
+                    <span>15m</span>
+                  </div>
+                </div>
               </div>
               <span>Jewel Khan</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-12.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="last-online">
+                    <span>20m</span>
+                  </div>
+                </div>
               </div>
               <span>Antu Ghosh</span>
             </div>
             <div class="active-item">
               <div class="active-img">
                 <img src="./assets/img/active-13.jpg" alt="" />
+                <div class="online-indicator">
+                  <div class="last-online">
+                    <span>1h</span>
+                  </div>
+                </div>
               </div>
               <span>Saif Rabby</span>
             </div>
