Responsive stories width for 360px screen

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   </div>
                 </div>
                 <div class="story">
-                  <video src="./assets/img/story-2.mp4" autoplay muted loop>
+                  <video src="./assets/img/story-2.mp4">
                     Your browser does not support HTML5 video.
                   </video>
                   <div class="story-avatar">
@@ -296,7 +296,7 @@
                   </div>
                 </div>
                 <div class="story">
-                  <video src="./assets/img/story-4.mp4" autoplay muted loop>
+                  <video src="./assets/img/story-4.mp4">
                     Your browser does not support HTML5 video.
                   </video>
                   <div class="story-avatar">
